<?xml version="1.0"?>
<package format="2">
  <name>sd_msgs</name>
  <version>1.0.0</version>
  <description>The sd_msgs package</description>

  <maintainer email="fionan@streetdrone.com">Fionan O'Sullivan</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
 
  <export>
  </export>
</package>
